tests/ui/macros/macro-use-bad-args-2.stderr
error[E0466]: bad macro import
  --> $DIR/macro-use-bad-args-2.rs:3:13
   |
LL | #[macro_use(foo="bar")]
   |             ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0466`.
